hotfix/text-overflow-issue

--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,6 +1,6 @@
 .form__input {
   width: 100%;
-  padding: 2px 2px 10px;
+  padding: 10px 2px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: normal;
